--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -28,7 +28,11 @@
                         </p>
                     </li class="about__item--inner">
                     <li>
-                        <button class="about__button" type="button">Read more</button>
+                        <button class="about__button" type="button">Read more
+                            <svg class="localisation-buttons__icon" width="10" height="9">
+                                <use href="images/icons.svg#icon-button-arrow"></use>
+                            </svg>
+                        </button>
                     </li>
                 </ul>
             </li>
