--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -73,23 +73,28 @@
     font-weight: 700;
     font-size: 14px;
     line-height: 18px;
+    width: 176px;
     height: 44px;
     display: flex;
     align-items: center;
     text-align: left;
     color: #d41443;
-    padding-left: 37px;
-    padding-right: 56px;
+    padding-left: 43px;
     margin-right: auto;
     cursor: pointer;
     transition: background-color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1),
-          color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1);
+      color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1);
         
-          &:hover,
-          &:focus {
-            background-color: #d41342;
-            color: #ffffff;
-          }
+      &:hover,
+      &:focus {
+        background-color: #d41342;
+        color: #ffffff;
+      }
+          
+      &:hover .localisation-buttons__icon,
+      &:focus .localisation-buttons__icon {
+         fill: #ffffff;
+      }
   }
   .about__milk {
     width: 100%;
