--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -372,7 +372,7 @@ body {
 
 @media screen and (min-width: 767px) {
   .header-top__buylink {
-    display: inline-block;
+    display: flex;
     color: #D41443;
     font-family: "DM Sans";
     font-style: normal;
@@ -382,6 +382,10 @@ body {
     letter-spacing: 0.04em;
     text-decoration: none;
     transition: background-color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1), color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1);
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
   }
   .header-top__buylink:hover, .header-top__buylink:focus {
     color: #ffffff;
@@ -899,14 +903,6 @@ body {
   font-family: "Titan One";
 }
 
-/*.product-item__section {
-    padding: 1em;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%)
-}*/
 .product {
   display: flex;
   flex-direction: column;
@@ -1282,13 +1278,13 @@ body {
   font-weight: 700;
   font-size: 14px;
   line-height: 18px;
+  width: 176px;
   height: 44px;
   display: flex;
   align-items: center;
   text-align: left;
   color: #d41443;
-  padding-left: 37px;
-  padding-right: 56px;
+  padding-left: 43px;
   margin-right: auto;
   cursor: pointer;
   transition: background-color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1), color 1000ms cubic-bezier(0.165, 0.84, 0.44, 1);
@@ -1296,6 +1292,9 @@ body {
 .about__button:hover, .about__button:focus {
   background-color: #d41342;
   color: #ffffff;
+}
+.about__button:hover .localisation-buttons__icon, .about__button:focus .localisation-buttons__icon {
+  fill: #ffffff;
 }
 
 .about__milk {
@@ -1436,6 +1435,24 @@ body {
   color: #000000;
   padding-bottom: 38px;
   max-width: 230px;
+}
+
+.advantages__icon--bucket::before {
+  content: url(/images/icon1bucket.png);
+  width: 33px;
+  height: 50px;
+}
+
+.advantages__icon--apple::before {
+  content: url(/images/icon1bucketapple.png);
+  width: 33px;
+  height: 50px;
+}
+
+.advantages__icon--heart::before {
+  content: url(/images/icon1heart.png);
+  width: 33px;
+  height: 50px;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1200px) {
@@ -2102,6 +2119,11 @@ body {
 }
 .footer-social__media-icon {
   fill: #fff;
+}
+.footer-social__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @media screen and (max-width: 767px) {
